# circuits

./: .gitignore  readme.md
Blocks/: Blocks.kicad_pcb  Blocks.kicad_pro  Blocks.kicad_sch  bb6v.kicad_sch  esp12f.kicad_sch  pp3v16v.kicad_sch
BuckBoostTest/: BuckBoostTest.kicad_pcb  BuckBoostTest.kicad_pro  BuckBoostTest.kicad_sch  bb6v.kicad_sch  pp3v16v.kicad_sch
USBPowerMux/: USBPowerMux.kicad_pcb  USBPowerMux.kicad_pro  USBPowerMux.kicad_sch  protection.kicad_pro  protection.kicad_sch  protection.pckl
a2d/: a2d.kicad_pcb  a2d.kicad_pro  a2d.kicad_sch  a2d_in.kicad_sch
air/: 3v3.kicad_sch  accel.kicad_sch  air.kicad_pcb  air.kicad_pro  air.kicad_sch  bme680.kicad_sch  esp32.kicad_sch  i2c.kicad_sch  i2ch.kicad_sch  led_column.kicad_sch  leds.kicad_sch  pir_d.kicad_sch  pira.kicad_sch  scd41.kicad_sch  sen55.kicad_sch  spec_gas.kicad_sch  temp.kicad_sch  usba.kicad_sch
esp8266-flexpower/: 33Reg.kicad_sch  LED_comparator.kicad_sch  bb6v.kicad_sch  esp12f.kicad_sch  esp8266-flexpower.kicad_pcb  esp8266-flexpower.kicad_pro  esp8266-flexpower.kicad_sch  pp3v16v.kicad_sch  usb_serial.kicad_sch
espamp/: 3v3.kicad_sch  amp.kicad_sch  buckconverter.kicad_sch  esp32.kicad_sch  espamp.kicad_pcb  espamp.kicad_pro  espamp.kicad_sch  i2c.kicad_sch  usbcpd.kicad_sch
leds/: 3v3.kicad_sch  a2d.kicad_sch  buckconverter.kicad_sch  esp32.kicad_sch  i2c.kicad_sch  led_channel.kicad_sch  leds.kicad_pcb  leds.kicad_pro  leds.kicad_sch  usbcpd.kicad_sch
libraries/: easyeda2kicad.kicad_sym
locks/: buck5V.kicad_sch  i2c.kicad_sch  lock.kicad_sch  locks.kicad_pcb  locks.kicad_pro  locks.kicad_sch  sensor.kicad_sch  switch.kicad_sch
moisture/: i2ch.kicad_sch  moisture.kicad_pcb  moisture.kicad_pro  moisture.kicad_sch
roomsensor/: 3v3.kicad_sch  README.md  accel.kicad_sch  bme680.kicad_sch  esp32.kicad_sch  i2c.kicad_sch  i2ch.kicad_sch  led_column.kicad_sch  led_column.pckl  leds.kicad_sch  lux.kicad_sch  mic.kicad_sch  pir_d.kicad_sch  pira.kicad_sch  place_footprints.ini  pp3v16v.pckl  roomsensor.kicad_pcb  roomsensor.kicad_pro  roomsensor.kicad_sch  temp.kicad_sch  usba.kicad_sch  usbc.kicad_sch
roomsensor/src/components/configuration/: A2DConfig.cpp  CMakeLists.txt  ConfigurationManager.cpp  ConfigurationManager.h  ConfigurationModule.h  DeviceConfig.cpp  DeviceConfig.h  GameOfLifeConfig.cpp  GameOfLifeConfig.h  I2CConfig.cpp  I2CConfig.h  IOConfig.cpp  IOConfig.h  LEDConfig.cpp  LEDConfig.h  MotionConfig.cpp  MotionConfig.h  SpeakerConfig.cpp  SpeakerConfig.h  TagsConfig.h  WifiConfig.cpp  WifiConfig.h  configuration_types.h
roomsensor/src/components/i2c/: CMakeLists.txt  ads1115_sensor.cpp  ads1115_sensor.h  amg8833_sensor.cpp  amg8833_sensor.h  bme280_sensor.cpp  bme280_sensor.h  bq27441.cpp  bq27441.h  i2c.cpp  i2c_sensor.h  lis2dh.c  lis2dh_sensor.cpp  lis2dh_sensor.h  lmp91000_sensor.cpp  lmp91000_sensor.h  mcp23008_sensor.cpp  mcp23008_sensor.h  mcp23088_keypad.cpp  mcp23088_keypad.h  opt3001_sensor.cpp  scd4x_sensor.cpp  scd4x_sensor.h  sen55_sensor.cpp  sen55_sensor.h  sensors.cpp  sensors.h  tas5825m_sensor.cpp  tas5825m_sensor.h
roomsensor/src/components/leds/: AuroraPattern.cpp  AuroraPattern.h  CMakeLists.txt  CalendarPattern.cpp  CalendarPattern.h  ChasePattern.cpp  ChasePattern.h  ClockPattern.cpp  ClockPattern.h  Color.h  ColorRotationPattern.cpp  ColorRotationPattern.h  CrossFadePattern.cpp  CrossFadePattern.h  CrossWipePattern.cpp  CrossWipePattern.h  FadePattern.cpp  FadePattern.h  FireworksPattern.cpp  FireworksPattern.h  GameOfLifePattern.cpp  GameOfLifePattern.h  JungleCanopyPattern.cpp  JungleCanopyPattern.h  LEDBuffer.cpp  LEDBuffer.h  LEDCoordinateMapperColumnMajor.h  LEDCoordinateMapperSerpentineColumn.h  LEDManager.cpp  LEDManager.h  LEDPattern.h  LEDStrip.h  LEDStripRmt.cpp  LEDStripRmt.h  LEDStripSurfaceAdapter.h  LEDSurface.h  LEDSurfaceImpl.h  LEDTransition.cpp  LEDTransition.h  LEDWireEncoderFlipdot.cpp  (+41 more)
roomsensor/src/components/lights/: CMakeLists.txt  ChasingLights.cpp  ChristmasLights.cpp  ConnectedLights.cpp  ConnectedLights.h  ConnectingLights.cpp  ConnectingLights.h  DisconnectedLights.cpp  DisconnectedLights.h  FlashingLights.cpp  FourColorLights.cpp  LEDBehavior.h  NoLights.cpp  PulsingLights.cpp  RainbowChasing.cpp  RainbowLights.cpp  SolidLights.cpp  SolidLights.h  led_control.cpp  led_control.h
roomsensor/src/components/serial_console/: CMakeLists.txt  cmd_hd108.cpp  cmd_hd108.h  cmd_ota.c  cmd_ota.h  cmd_sk6812.cpp  cmd_sk6812.h  cmd_tlc59711.cpp  cmd_tlc59711.h  cmd_wifi.c  console.cpp  console_buffer.c  console_buffer.h  gpio.cpp  gpio.h
roomsensor/src/main/: CMakeLists.txt  HD108.cpp  filesystem.h  gen_build_timestamp.cmake  gpio.cpp  gpio.h  http.cpp  idf_component.yml  main.cpp  metrics.cpp  netlog.cpp  netlog.h  ota.cpp  ota.h  sensors.cpp  tags.cpp  telemetry.cpp  telemetry.h  wifi.cpp  wifi.h
roomsensor/src/util/: README.md  calibrate_leds.py  provision.py  pyproject.toml  pytest.ini
roomsensor/src/util/roomsensor_util/: __init__.py  serial_console.py
roomsensor/src/util/roomsensor_util.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
roomsensor/src/util/tests/: conftest.py  test_nvs_commands.py  test_ota_integration.py  test_serial_console.py
surprise/: LED_comparator.kicad_sch  battery.kicad_sch  bb6v.kicad_sch  button.kicad_sch  components.kicad_sch  esp32.kicad_sch  i2c.kicad_sch  pp3v16v.kicad_sch  surprise.kicad_pcb  surprise.kicad_pro  surprise.kicad_sch  usb-c.kicad_sch  usb_serial.kicad_sch
surprise/src/surprise/main/: ButtonsPuzzleApp.cpp  ButtonsPuzzleApp.h  CMakeLists.txt  ChasingLights.cpp  ChristmasLights.cpp  FlashingLights.cpp  FourColorLights.cpp  NoLights.cpp  PulsingLights.cpp  RainbowChasing.cpp  RainbowLights.cpp  SolidLights.cpp  application.cpp  application.h  bq27441.cpp  bq27441.h  button_event.h  config.h  credentials.h.example  i2c_master_ext.c  i2c_master_ext.h  io_manager.cpp  io_manager.h  led_control.cpp  led_control.h  lis2dh.c  lis2dh.h  logging_app.cpp  logging_app.h  main.cpp  sensor_handler.cpp  sensor_handler.h  sensors.cpp  sensors.h  wifi.cpp  wifi.h
(+528 files in other folders)
