[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roomsensor-util"
version = "0.1.0"
description = "Utilities for interacting with the RoomSensor ESP32S3 over serial"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "RoomSensor Dev" }]
dependencies = [
  "pyserial>=3.5",
  "pytest>=8.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["roomsensor_util*"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
filterwarnings = [
  "ignore::DeprecationWarning",
]


