idf_component_register(
    SRCS "main.cpp" "wifi.cpp" "sensors.cpp" "io_manager.cpp" "logging_app.cpp" "led_control.cpp" "i2c_master_ext.c" "bq27441.cpp" "lis2dh.c" "ButtonsPuzzleApp.cpp" "FourColorLights.cpp" "ChristmasLights.cpp" "NoLights.cpp" "ChasingLights.cpp" "RainbowLights.cpp" "RainbowChasing.cpp" "FlashingLights.cpp" "PulsingLights.cpp"
    INCLUDE_DIRS "."
)
